img fixes on mobile

--- a/style.css
+++ b/style.css
@@ -391,7 +391,7 @@ footer span {
 
 /* CASE STUDY PAGE */
 .heading {
-  max-width: 900px;
+  max-width: 768px;
   margin: 0 auto 4rem;
   padding: 3rem 0 1rem;
   border-bottom: 2px solid var(--primary-color);
@@ -418,7 +418,7 @@ footer span {
 }
 
 #content {
-  max-width: 900px;
+  max-width: 768px;
   width: 100%;
   margin: 0 auto;
   padding: 0;
@@ -463,7 +463,10 @@ footer span {
   pointer-events: none;
   border-radius: 0px;
   max-height: calc(100vh - 10rem);
+  min-width: 100vw;
+  margin-left: calc(100vw - 100% - 3rem);
   object-fit: contain;
+  background: var(--surface-bg-color);
 }
 
 
@@ -706,11 +709,9 @@ blockquote p {
     width: auto;
     cursor: pointer;
     pointer-events: unset;
-    /* max-width: 100%; */
     min-width: 680px;
     max-height: 680px;
     margin: 0;
-    background: var(--surface-bg-color);
     border-radius: 4px;
   }
 
